<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.com.gmd.appgetall.PrincipalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:id="@+id/tvinombre"
        android:text="Hello World!"/>

    <Button
        android:layout_width="match_parent"
        android:layout_below="@+id/tvinombre"
        android:text="Login"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
</RelativeLayout>
